compiler/tests/ar/errors/pure_vec_mut.salam
// لغة: العربية
// توقع: E012
نقي دالة املأ(عدد : صحيح) : صحيح:
    متغير قيمة := متجه {} بوصفه متجه<صحيح>
    قيمة.أضف(عدد)
    أرجع قيمة.طول()
نهاية

دالة الرئيسية:
    اطبع(املأ(3))
نهاية
